--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>    
     <!--Custom-->
-    <link rel="preload" href="/CSS/estilos.css">
-    <link rel="stylesheet" href="/CSS/estilos.css">
+    <link rel="preload" href="CSS/estilos.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
 
     <!-- Librerias -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
