--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="text-3">y soy <span class="typing"></span></div>            
             </div>
             <div class="contenedor__imagen">
-                <img src="/IMG/ingeniero.jpg" alt="">
+                <img src="IMG/ingeniero.jpg" alt="">
             </div>                               
         </div>
     </section>    
@@ -65,7 +65,7 @@
             <h2 class="titulo">Sobre mí</h2>
             <div class="contenedor__secundario width">  
                 <div class="contenedor__imagen-secundario">
-                    <img src="/IMG/sobre_mi.jpg" alt="">
+                    <img src="IMG/sobre_mi.jpg" alt="">
                 </div> 
                    
                 <div class="contenedor__about">
@@ -90,7 +90,7 @@
 
                     <div class="card">
                         <div class="card__image-container">
-                            <img src="/IMG/01.JPG" alt="">
+                            <img src="IMG/01.JPG" alt="">
                         </div>
                         <div class="card__titulo">
                             <h3>Blog de Cafe</h3>
@@ -110,7 +110,7 @@
                     
                     <div class="card">
                         <div class="card__image-container">
-                            <img src="/IMG/02.JPG" alt="">
+                            <img src="IMG/02.JPG" alt="">
                         </div>
                         <div class="card__titulo">
                             <h3>Tienda Virtual</h3>
@@ -130,7 +130,7 @@
 
                     <div class="card">
                         <div class="card__image-container">
-                            <img src="/IMG/03.JPG" alt="">
+                            <img src="IMG/03.JPG" alt="">
                         </div>
                         <div class="card__titulo">
                             <h3>Bienes Raices</h3>
