--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>        
     </footer>
 
-    <script src="/JS/app.js"></script>
+    <script src="JS/app.js"></script>
 
 </body>
 </html>
